--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hello World</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <link href='/style.css' rel='stylesheet'>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta name="description" content="A simple hello world page">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Hello World">
+  <meta name="author" content="Your Name">
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
+  <div class="container text-center mt-5">
+    <h1>Hello, world!</h1>
+    <button id="helloButton" class="btn btn-primary mt-3">Press me</button>
+  </div>
   <script defer type="text/javascript" src="/main.js"></script>
 </body>
 </html>
